# myclaude

./: .gitignore  LICENSE  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
.github/: CODEOWNERS
.github/workflows/: release.yml
app/: app.config.ts  app.vue
app/components/: NotificationCenter.vue  OnboardingWizard.vue  UpdateBanner.client.vue
app/composables/: useComparisonData.ts  useSettingsData.ts  useUsageData.ts
app/layouts/: dashboard.vue
app/locales/: en.json
app/pages/: compare.vue  costs.vue  index.vue  monitoring.vue  notifications.vue  projects.vue  settings.vue  usage.vue
app/stores/: useNotificationStore.ts  useSettingsStore.ts  useStatsStore.ts  useUsageStore.ts
app/types/: notifications.ts  remote.ts  settings.ts  stats.ts  telegram.ts  usage.ts  whatsapp.ts
app/utils/: format.ts
scripts/: copy-server.mjs  fix-server-deps.mjs
server/plugins/: whatsapp.ts
server/utils/: calculateCost.ts  chatState.ts  claudeConfig.ts  claudeGenerate.ts  contextProbe.ts  csvFormatter.ts  db.ts  generateBus.ts  localDate.ts  mcpDiscover.ts  notificationBus.ts  notificationDb.ts  paceCalculator.ts  parseSessionJsonl.ts  parseStatsCache.ts  pricing.ts  projectPathUtils.ts  rateLimitProbe.ts  remoteExecutor.ts  remoteFormatter.ts  remoteReplyRouter.ts  routingDb.ts  sessionDiscovery.ts  sessionQueries.ts  subscriptionType.ts  syncApiCosts.ts  syncSessionDb.ts  (+10 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  notifications.rs
(+117 files in other folders)
