[package]
name = "claude-command"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSError", "NSBundle"] }
objc2-user-notifications = { version = "0.3", features = [
  "UNUserNotificationCenter",
  "UNNotificationSettings",
  "UNNotificationContent",
  "UNNotificationRequest",
  "UNNotificationSound",
  "UNNotification",
  "block2",
] }
block2 = "0.6"

[target.'cfg(not(target_os = "macos"))'.dependencies]
notify-rust = "4"
